--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8075
+server.port=8095
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3307/etudiant?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.thymeleaf.cache=false
