--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.thymeleaf.cache=false
+
+#J'accèpte un fichier jusqu'à 10Mo
+multipart.maxFileSize = 10000KB
+#Toutes les requetes ne doivent pas depasser 10Mo
+multipart.maxRequestSize = 10000KB
+#Ce dossier sera crée automatiquement, c'est là que je vais stocker les photos
+dir.images = ${user.home}/images/
+
